修复编译问题